# RayTracer

./: CMakeLists.txt  Masterpiece.ppm  Masterpiece.txt  README.txt  Writeup.txt  sample1d.txt  test.txt  texturebb.ppm
src/: CMakeLists.txt  Color.hpp  CrossProduct.cpp  CrossProduct.hpp  DotProduct.cpp  DotProduct.hpp  Face.cpp  Face.hpp  InputData.hpp  InputReader.cpp  InputReader.hpp  Light.hpp  Norm.cpp  Norm.hpp  Normalize.cpp  Normalize.hpp  Object.cpp  Object.hpp  Phong.cpp  Phong.hpp  Plane.cpp  Plane.hpp  Point.cpp  Point.hpp  Qppax.cpp  Qppax.hpp  Ray.cpp  Ray.hpp  RayPayload.cpp  RayPayload.hpp  Sphere.cpp  Sphere.hpp  SphereCollision.cpp  SphereCollision.hpp  Texture.cpp  Texture.hpp  TextureVertex.hpp  ValidityChecker.cpp  ValidityChecker.hpp  Vector.cpp  (+6 more)
